--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,16 +1,58 @@
+
 <%= form_for(@board, :html => { :multipart => true }) do |f| %>
-    
-    
-    <br>
-    사진 등록
-    <!--<input type="file" accept="image/*">-->
-    <%= f.file_field :board_image_url , accept: "image/*" %>
-    <br>
-    
-     1등 소감! :
-    <%= f.text_area :boardContent, :rows => 3, :cols => 50 %>
 
+    <div class="funkyradio">
+    <h4>Solo / Duo / Squad </h4>
+        <div class="funkyradio-default">
+            <input type="radio" name="board[boardCategory]" id="board_boardCategory_solo" value="Solo" checked/>
+            <label for="board_boardCategory_solo">Solo</label>
+            
+        </div>
+        <div class="funkyradio-default">
+            <input type="radio" name="board[boardCategory]" id="board_boardCategory_duo" value="Duo" />
+            <label for="board_boardCategory_duo">Duo</label>
+            
+        </div>
+        <div class="funkyradio-default">
+            <input type="radio" name="board[boardCategory]" id="board_boardCategory_squad" value="Squad" />
+            <label for="board_boardCategory_squad">Squad</label>
+            
+        </div>
+    </div>
     <br>
+    
+    <h4>사진 등록</h4>
+    <label class="custom-file-upload">
+        <%= f.file_field :board_image_url , accept: "image/*" %>
+        <h4 style="text-align: center">Camera / Gallery</h4>
+    </label>
+    <br>
+    <img id="blah" src="#" alt="" style=" display: block; margin: 0 auto; width: 300px; height: 300px"/>
+    <br>
+    <h4>소감</h4>
+    <%= f.text_area :boardContent, :placeholder => "1등 축하드립니다.",:style => "width: 100%; display: block; margin: 0 auto;" %>
 
-    <%= f.submit '사진 추가', class: "btn btn-success" %>
+    <br><br>
+
+    <%= f.submit '저장하기', class: "custom-btn", :confirm => "저장을 누르시면 삭제를 하실 수 없습니다." %>
 <% end %>
+
+
+<script>
+function readURL(input) {
+
+  if (input.files && input.files[0]) {
+    var reader = new FileReader();
+
+    reader.onload = function(e) {
+      $('#blah').attr('src', e.target.result);
+    }
+
+    reader.readAsDataURL(input.files[0]);
+  }
+}
+
+$("#board_board_image_url").change(function() {
+  readURL(this);
+});
+</script>
