--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,8 +1,7 @@
-<br><br><br><br><br><br>
-<div class="container">
-    <h2>사진 추가하기</h2>
-    <br><br>
-  
+<br><br>
+<div class="board_form">
+    <h2 style="text-align: center">사진 등록하기</h2>
+    <br>
     <%= render 'form' %>
     
     <%= link_to 'Back', boards_path %>
