--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,8 +1,8 @@
 
-        <br><br><br><br><br>
+        <br><br><br>
         <hr>
-        <h5>대표: <%= @board.boardUser %></h5>
-        <h5>설명: </h5>
+        <h5>ID: <%= @board.boardUser %></h5>
+        <h5>소감: </h5>
         <%= @board.boardContent %>
         <hr>
         
