--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,23 +1,21 @@
-<h1>Hack Your Memo</h1>
-<a href="/boards/new">글쓰기</a>
-<div class="table-responsive">
-  <table class="table table-fit">
-    <thead>
-      <tr>
-        <th>사진</th>
-        <th>소감</th>
-        <th>시간</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @boards.each do |board| %>
-        <tr>
-          <td><%= link_to board.boardContent, board %></td>
-          <td><%= board.boardUser%></td>
-          <td><%= board.created_at %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <%#= paginate @memos %>
-</div>
+<div class="container">
+<br><br>
+<h1>사진 구경 <button class="custom-btn2"><a href="/boards/new">사진 등록</a></button></h1>
+
+<br>
+
+<% @boards.each do |a| %>
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+    <div class="card">
+      <img class="clubpart-image" src="<%= image_url a.board_image_url.url %>" alt="Image" >
+      <a href="<%= board_path(a.id) %>">
+      <div class="card-img-overlay card-img-back">
+          <h4 class="card-title-back"><%= a.boardContent %></h4>
+      </div>
+      </a>
+    </div>
+  </div>     
+<% end %>
+                
+
+  <%= paginate @boards %>
