--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,27 +8,29 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">BG chicken</a>
+      <a class="navbar-brand" href="<%= root_path %>">BG chicken</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
       <ul class="nav navbar-nav navbar-right">
+        <li><a href="/">이번주 랭킹</a></li>
         <li><a href="/">참여방법</a></li>
-        <li><a href="/boards">사진등록</a></li>
-        <li><a href="/">Sign up</a></li>
-        <li><a href="/users/sign_in">Sign in</a></li>
+        <li><a href="/boards">사진구경</a></li>
+        <li><a href="/boards/new">사진등록</a></li>
         <li class="dropdown">
-            
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <%= link_to 'Log Out', destroy_user_session_path, :method => :delete %>
-            <li><a href="#">Another action</a></li>
-            <li><a href="https://www.fiverr.com/users/irfan_web/manage_gigs">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
+          <% if user_signed_in? %>  
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              <span id="user_name"><%= current_user.email%></span>
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to 'My Page', my_page_path(current_user.id) %></li>
+              <li><%= link_to 'Log Out', destroy_user_session_path, :method => :delete %></li>
+            </ul>
+          <% else %>
+            <%= link_to 'Log in', new_user_session_path, id: 'header_add', class: "page-scroll"  %>
+          <% end %>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
