--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,53 @@
-<h2>Sign up</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+<div class="container" style="max-width: 500px; padding-top: 100px">
+  <div class="panel panel-default devise-bs">
+    <div class="panel-heading">
+      <p style="font-size:3rem; ">
+        배그 치킨 Sign up
+      </p>
+      <h4><%#= t('.sign_up', default: 'Sign up') %></h4>
+    </div>
+    <div class="panel-body">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
+        <div class="form-group">
+          <%= f.label :email , style: 'color: #a3a3a3; font-size: 2rem'%>
+          <%= f.email_field :email, required: true, autofocus: true, class: 'form-control'%>
+        </div>
+        <div class="form-group">
+          <%= f.label '배그 ID' , style: 'color: #a3a3a3; font-size: 2rem'%>
+          <%= f.text_field :bgid, required: true , class: 'form-control'%>
+        </div>
+        <div class="form-group">
+          <%= f.label :password , style: 'color: #a3a3a3; font-size: 2rem'%>
+          <%= f.password_field :password, required: true, autocomplete: "off",  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation , style: 'color: #a3a3a3; font-size: 2rem'%>
+          <%= f.password_field :password_confirmation, required: true, autocomplete: "off", class: 'form-control'%>
+        </div>
+        <p style="text-align: center">회원가입 시 <a href="/terms">이용약관</a>에 동의하게 됩니다. </p>
+        <%= f.submit t('.sign_up', default: 'Sign up'), class: 'custom-btn' %>
+      <% end %>
+    </div>
   </div>
+  <%= render 'devise/shared/links' %>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "devise/shared/links" %>
+<!--<h2>Sign up</h2>-->
+
+<!--<%#= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>-->
+<!--  <%#= f.error_notification %>-->
+
+<!--  <div class="form-inputs">-->
+<!--    <%#= f.input :email, required: true, autofocus: true %>-->
+<!--    <%#= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>-->
+<!--    <%#= f.input :password_confirmation, required: true %>-->
+<!--  </div>-->
+
+<!--  <div class="form-actions">-->
+<!--    <%#= f.button :submit, "Sign up" %>-->
+<!--  </div>-->
+<!--<%# end %>-->
+
+<!--<%#= render "devise/shared/links" %>-->
