--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -8,7 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="<%= root_path %>">BG chicken</a>
+      <%#= link_to image_tag('bgchicken2.png'), root_path, id: 'logo',class: "navbar-brand page-scroll"%> 
+      <a class="navbar-brand" href="<%= root_path %>"><img src="<%= image_url 'bgchicken1.png' %>" alt="Smiley face" width="150" height="30"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
