로고 디자인 / index 디자인

--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -24,7 +24,7 @@
     <h4>사진 등록</h4>
     <label class="custom-file-upload">
         <%= f.file_field :board_image_url , accept: "image/*" %>
-        <h4 style="text-align: center">Camera / Gallery</h4>
+        <h4 style="text-align: center"><i class="fa fa-camera-retro fa-1x"></i> Camera / <i class="fa fa-picture-o fa-1x" aria-hidden="true"></i> Gallery</h4>
     </label>
     <br>
     <img id="blah" src="#" alt="" style=" display: block; margin: 0 auto; width: 300px; height: 300px"/>
