--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,6 +8,18 @@
 // @import url(https://fonts.googleapis.com/earlyaccess/hanna.css);
 @import url(//fonts.googleapis.com/earlyaccess/hanna.css);
 
+.navbar-brand{
+  padding: 5px 15px;
+}
+// .navbar {
+//   height: 70px;
+// }
+
+// .navbar-collapse{
+//   margin-top: 10px;
+// }
+
+
 body{
      font-family: 'hanna', sans-serif;
 }
@@ -19,6 +31,39 @@ body{
     max-width: 500px;
     background-color: #eceff1;
     color: #263238;
+}
+// ---------index page-----------------------------------------
+// #how_to {
+//   height: 400px;
+// }
+
+#service_introduce1 {
+  
+}
+
+#service_introduce1 h2{
+  text-align: center;
+}
+
+#service_introduce2 {
+  color: #ff9100;
+  // background-color: #e0e0e0;
+  background-color: #222;
+
+}
+
+#service_introduce2 h2{
+  text-align: center;
+}
+
+#service_introduce3 {
+ text-align: center;
+}
+
+#winner {  
+  text-align: center;
+  color: #ff9100;
+  background-color: #222;
 }
 
 //--board index page---------------- 
