--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,35 +1,99 @@
 <section id="main_image">
     
     <div style="position: relative;">
-        <img src="<%= image_url('background.jpg') %>" class="img-rounded" alt="Cinque Terre" style="width:100%;">
+        <img src="<%= image_url('background.jpg') %>" class="img-rounded" alt="Cinque Terre" style="width: 100%; height: 600px">
     </div>
     
-    <div style="position: absolute; bottom: 30px; left: 25%; width: 50%; text-align: center;">
+    <div style="position: absolute; top: 300px; left: 25%; width: 50%; text-align: center;">
             
-        <div class="over_slideshow" style="color: white">
-            <h1> 사진올리고 진짜 치킨 먹자~! </h1>
+        <div class="over_slideshow" style="color: #ff9100">
+            <h1> 1등 사진올리고 <br>진짜 치킨 먹자~! </h1>
             <br><br>
             <p>광고문의 .</p> 
         </div>
     </div>
     
+    <!--<div style="position: absolute; bottom: 200px; left: 25%; width: 50%; text-align: center;">-->
+            
+    <!--    <div class="over_slideshow" style="color: white">-->
+    <!--        <h1> 이번주 결과 </h1>-->
+    <!--        <br><br>-->
+    <!--        <p> - gil_bbang </p> -->
+    <!--    </div>-->
+    <!--</div>-->
+    
 </section>
 
-<section id="service_introduce">
+<section  id="service_introduce3">
+    <div class="container">
+        <br>
+        <h2>참여방법</h2>
+        <div class="col-md-6 col-lg-6">
+            <h4>1. 회원가입 및 로그인</h4>
+            <br>
+            <img src="<%= image_url 'signup.jpg' %>" style="display: block; margin: auto auto; width: 200px; height: 250px">
+            <br>
+            <!--<p>- 회원가입시 사용하신 <mark>이메일</mark>로 선정되신 분들께 연락이 갑니다.</p>-->
+            <!--<p>- 회원가입시 입력하신 배그ID와 등록하신 사진이 일치하셔야합니다.</p>-->
+        </div>
+        <div class="col-md-6 col-lg-6">
+            <h4>2. 사진등록 (로그인 후 사용가능)</h4>
+            <br>
+            <img src="<%= image_url 'upload.jpg' %>" style="display: block; margin: 0 auto; width: 200px; height: 300px">
+            <br>
+            <!--<p>- 상단의 사진등록 버튼을 누르셔서 게임종류, 1등사진, 소감한마디를 올려주시면 됩니다. </p>-->
+            <!--<p>- 핸드폰에서도 로그인 후 바로 사진을 찍거나 저장된 사진 업로드가 가능합니다. </p>-->
+            <!--<p>- 한번 올리신 사진은 중복사용방지를 위해 삭제가 불가능하오니 주의해주시기바랍니다.</p> -->
+            <!--<p>- 실수로 올리신 사진 또는 중복으로 업로드된 사진들은 비공개처리를 해주시면 됩니다.</p>-->
+        </div>
+    </div>
+    <br>
+</section>
+
+<section  id="service_introduce2">
+    <div class="container" style="max-width: 600px;">
+        <br>
+        <h2>추첨 및 선물</h2>
+        <br><br>
+        <h4>- 당첨자 : <ins>3명</ins></h4>
+        <h4>- 결과 발표 : 매주 월요일 오전 8시 / 홈페이지 및 당첨자메일발송.</h4>
+        <br><br>
+        <p>* < 유의사항 ></p>
+        <p>- 1주일 단위로 등록하신 사진에 한해 추첨이 이루어집니다. </p>
+        <p>- 매주 월요일 00:00 00초 ~ 일요일 23:59 59초 사이에 게시된 글 기준</p>
+        <p>- 등록할 사진과 회원가입시 등록하신 배그ID와 일치한 사진만 가능합니다.</p>
+        <p>- 사진을 등록하시면 삭제가 불가능합니다. (잘못 업로드시 비공개로 전환하시면 됩니다.)</p>
+        <br><br>
+    </div>
+</section>    
     <!-- 추첨에 사용되는 코드 -->
     <!-- 글 올리는 방법 -->
-    <div class="container">
-        <hr>
-        이번주 당첨자 BGID<br>
-        <% @random.each do |a|%>
-            당첨자 : <%= a.boardUserBGID %> <br> 
-        <% end %>
-    </div>
+    
       <!--  파일 및 카메라 인풋 코드 <input type="file" accept="image/*">  -->
     <!-- 어떤 서비스를 하는 페이지인지? -->
+<section  id="service_introduce1">
+    <div class="container" style="max-width: 600px;">
+        <br>
+        <h2>서비스 소개</h2>
+        <br><br>
+        <p>- 배틀그라운드 1등사진을 등록, 추첨을 통해 치킨을 드리는 서비스</p>
+        <p>- 해당 서비스는 페이지 곳곳에 있는 에드센스(구글 광고컨텐츠)를 활용하여 수익을 얻어 치킨을 선물해드립니다. </p>
+        <p>- 사용자가 많아질수록 더 많은 치킨을 드릴 계획입니다. </p>
+        <p>- <del>'배틀그라운드 게임도중 1등을 하고 진짜로 치킨을 먹을 수 있으면 좋겠다' 라는 생각과 '정말 힘들게 1등하고 사진 한 장남기는 것'이 아쉬워 시작하였습니다.</del></p>
+        <br><br>
+    </div>
 </section>
 
-
+<section id="winner">
+    <div class="container">
+        <br>
+        <h2>이번주 당첨자 (배그ID)</h2>
+        <br>
+        <% @random.each do |a|%>
+            <h4><%= a.boardUserBGID %></h4> <br> 
+        <% end %>
+    </div>
+</section>
 
 <section id="move_button">
 
