navbar js로 이동하는거 / show페이지 디자인중

--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -11,7 +11,7 @@
       <%#= link_to image_tag('bgchicken2.png'), root_path, id: 'logo',class: "navbar-brand page-scroll"%> 
       <a class="navbar-brand" href="<%= root_path %>">
         <!--<img src="<%#= image_url 'bgchicken1.png' %>" alt="Smiley face" width="150" height="30">-->
-        <h1 style="margin-top : 0; color: #ff9100">배그<span class="txt-rotate" data-period="1500" data-rotate='[ "치킨.", "chicken." ]'></span></h1>
+        <h1 style="margin-top : 0; color: #ff9100">배그<span class="txt-rotate" data-period="1500" data-rotate='[ "치킨.", "chicken." ]'> 치킨</span></h1>
       </a>
     </div>
 
@@ -19,8 +19,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/">이번주 랭킹</a></li>
-        <li><a href="/">참여방법</a></li>
+        <!--<li><a href="/">이번주 랭킹</a></li>-->
+        <li><a href="/#service_introduce3">참여방법</a></li>
         <li><a href="/boards">사진구경</a></li>
         <li><a href="/boards/new">사진등록</a></li>
         <li class="dropdown">
