--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,4 +1,7 @@
-
+<p style="color: red">
+  <%#= flash[:success] unless flash[:success].blank? %>
+  <%= flash[:error] unless flash[:error].blank? %>
+</p>
 <%= form_for(@board, :html => { :multipart => true }) do |f| %>
 
     <div class="funkyradio">
@@ -22,8 +25,9 @@
     <br>
     
     <h4>사진 등록</h4>
+    <%#= f.file_field :board_image_url , accept: "image/*" %> <!-- , required: true  -->
     <label class="custom-file-upload">
-        <%= f.file_field :board_image_url , accept: "image/*" %>
+        <%= f.file_field :board_image_url , accept: "image/*"%>
         <h4 style="text-align: center"><i class="fa fa-camera-retro fa-1x"></i> Camera / <i class="fa fa-picture-o fa-1x" aria-hidden="true"></i> Gallery</h4>
     </label>
     <br>
@@ -33,7 +37,7 @@
     <%= f.text_area :boardContent, :placeholder => "1등 축하드립니다.",:style => "width: 100%; display: block; margin: 0 auto;" %>
 
     <br><br>
-
+    
     <%= f.submit '저장하기', class: "custom-btn", data: { confirm: '공정성을 위해 저장하시면 삭제가 불가능하니 다시 한 번 확인 부탁드립니다.' } %>
 <% end %>
 
