--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,13 +1,19 @@
-
-        <br><br><br>
-        <hr>
-        <h5>ID: <%= @board.boardUser %></h5>
-        <h5>소감: </h5>
-        <%= @board.boardContent %>
-        <hr>
-        
-        <h5>대표 이미지</h5>
-        <%= image_tag @board.board_image_url.url , :style => "width: 300px; height: 300px"%>
-    
-        <br>
-        <hr>
+        <div class="board_form">
+                <div class="container">
+                        <br><br><br>
+                        
+                       
+                        <%= image_tag @board.board_image_url.url , :style => "display: block; width: 400px; height: 400px"%>
+                        <br>
+                        <h4>BGID: <%= @board.boardUserBGID %></h4>
+                        <br>
+                        <h4>소감: </h4>
+                        <h5><%= @board.boardContent %></h5>
+                        <br>
+                        <h4>시간 : <%= Time.at(@board.board_create_time + (3600*9)) %></h4>
+                       
+                        <br>
+                        <hr>
+                        
+                </div>
+        </div>
