공개 비공개 때문에 Board모델 및 컨트롤러 수정중

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -11,9 +11,28 @@
                         <h5><%= @board.boardContent %></h5>
                         <br>
                         <h4>시간 : <%= Time.at(@board.board_create_time + (3600*9)) %></h4>
-                       
+                        <br>
+                        <h5>현재상태 : 
+                                <% if @board.board_private == 'true' %>
+                                        비공개
+                                <% else %>
+                                        공개
+                                <% end %>
+                        </h5>
+                        
+                        <%if @board.user_id == current_user.id %>
+                                <%= form_tag("/boards/private/#{@board.id}", method: 'post') do %>        
+                                        <label class="switch">
+                                          <input type="checkbox" name="private_value" checked_value=true unchecked_value=false >
+                                          <span class="slider round"></span>
+                                        </label><br>
+                                        <%= submit_tag('비공개하기') %>
+                                <% end %>
+                        <% end %>
                         <br>
                         <hr>
                         
                 </div>
         </div>
+        
+       
