--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
           <%= f.email_field :email, required: true, autofocus: true, class: 'form-control'%>
         </div>
         <div class="form-group">
-          <%= f.label '배그 ID' , style: 'color: #a3a3a3; font-size: 2rem'%> <p style="color: red">(앞으로 등록하실 사진의 배그ID와 동일해야합니다!)</p>
+          <%= f.label '배그 ID' , style: 'color: #a3a3a3; font-size: 2rem'%> <p style="color: red">(앞으로 등록하실 사진의 배그ID와 소대문자 구분 및 문자가 완벽히 동일해야합니다!)</p>
           <%= f.text_field :bgid, required: true , class: 'form-control'%>
         </div>
         <div class="form-group">
