--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Workspace</title>
+  <title>배그 치킨</title>
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3">
   
