--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -11,7 +11,7 @@
       <%#= link_to image_tag('bgchicken2.png'), root_path, id: 'logo',class: "navbar-brand page-scroll"%> 
       <a class="navbar-brand" href="<%= root_path %>">
         <!--<img src="<%#= image_url 'bgchicken1.png' %>" alt="Smiley face" width="150" height="30">-->
-        <h1 style="margin-top : 0; color: #ff9100">배그<span class="txt-rotate" data-period="1500" data-rotate='[ "치킨.", "chicken.", "치킨.", "chicken." ]'> 치킨</span></h1>
+        <h1 style="margin-top : 0; color: #ff9100">배그<span class="txt-rotate" data-period="1500" data-rotate='[ "치킨집.", "chicken-house.", "치킨집.", "chicken-house." ]'> 치킨집</span></h1>
       </a>
     </div>
 
