--- a/app/views/my_page/show.html.erb
+++ b/app/views/my_page/show.html.erb
@@ -11,7 +11,7 @@
         <h4 style="text-align: center">| Solo 사진 |</h4>
         <br>    
             <% @user.boards.where(:boardCategory => 'Solo').each do |a| %>
-                <%= link_to image_tag(a.board_image_url, :style => "width: 250px; height: 250px" ), board_path(a.id)%>
+                <%= link_to image_tag(a.board_image_url.thumb.url, :style => "width: 250px; height: 250px" ), board_path(a.id)%>
             <% end %>
         </section>
         
@@ -19,7 +19,7 @@
         <h4 style="text-align: center">| Duo 사진 |</h4>
         <br>
             <% @user.boards.where(:boardCategory => 'Duo').each do |a| %>
-                <%= link_to image_tag(a.board_image_url, :style => "width: 250px; height: 250px" ), board_path(a.id)%>
+                <%= link_to image_tag(a.board_image_url.thumb.url, :style => "width: 250px; height: 250px" ), board_path(a.id)%>
             <% end %>
         </section>
         
@@ -27,7 +27,7 @@
         <h4 style="text-align: center">| Squad 사진 |</h4>
         <br>
             <% @user.boards.where(:boardCategory => 'Squad').each do |a| %>
-                <%= link_to image_tag(a.board_image_url, :style => "width: 250px; height: 250px" ), board_path(a.id)%>
+                <%= link_to image_tag(a.board_image_url.thumb.url, :style => "width: 250px; height: 250px" ), board_path(a.id)%>
             <% end %>
         <section>
             
