--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -32,6 +32,14 @@ body{
     background-color: #eceff1;
     color: #263238;
 }
+
+.btn{
+  height: 40px;
+  width: 60px;
+  margin-bottom: 30px;
+  background-color: #ff9100;
+  color: white;
+}
 // ---------index page-----------------------------------------
 // #how_to {
 //   height: 400px;
