정보수정 design / 비번찾기 design

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -31,7 +31,7 @@
                                                 </label>
                                                 <span style="margin-bottom: 5px">비공개</span>
                                                 &nbsp;&nbsp;
-                                                <input class="btn" type="submit" value="저장">
+                                                <input class="btn btn-orange" type="submit" value="저장">
                                                 <%#= submit_tag '저장' %>
                                         <% end %>
                                 <% end %>
