--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,15 +1,26 @@
-<h2>Forgot your password?</h2>
-
-<%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+<div class="container" style="max-width: 500px; padding-top: 100px">
+  <div class="panel panel-default devise-bs">
+    <div class="panel-heading">
+      <h2>Forgot your password?</h2>
+    </div>
+    <div class="panel-body">
+      <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.error_notification %>
+      
+        <div class="form-inputs">
+          <div class="form-group">
+              *&nbsp;<%= f.label :email , style: 'color: #a3a3a3; font-size: 2rem'%>
+              <%= f.email_field :email, required: true, autofocus: true, class: 'form-control'%>
+              <%#= f.input :email, required: true, autofocus: true, class: 'form-control' %>
+          </div>
+        </div>
+        
+        <div class="form-actions">
+          <%= f.button :submit, "Send me reset password instructions" %>
+        </div>
+      <% end %>
+      <hr>
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
