--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,6 +63,8 @@
         <p>- 매주 월요일 00:00 00초 ~ 일요일 23:59 59초 사이에 게시된 글 기준</p>
         <p>- 등록할 사진과 회원가입시 등록하신 배그ID와 일치한 사진만 가능합니다.</p>
         <p>- 사진을 등록하시면 삭제가 불가능합니다. (잘못 업로드시 비공개로 전환하시면 됩니다.)</p>
+        <span>- 추첨코드 (실제 사용코드 / Ruby on Rails기반)</span>
+        <img src="<%= image_url 'random.png' %>" style="width: 100%">
         <br><br>
     </div>
 </section>    
@@ -77,7 +79,7 @@
         <h2>서비스 소개</h2>
         <br><br>
         <p>- 배틀그라운드 1등사진을 등록, 추첨을 통해 치킨을 드리는 서비스</p>
-        <p>- 해당 서비스는 페이지 곳곳에 있는 에드센스(구글 광고컨텐츠)를 활용하여 수익을 얻어 치킨을 선물해드립니다. </p>
+        <p>- 해당 서비스는 페이지 곳곳에 있는 광고를 활용하여 수익을 얻어 치킨을 선물해드립니다. </p>
         <p>- 사용자가 많아질수록 더 많은 치킨을 드릴 계획입니다. </p>
         <p>- <del>'배틀그라운드 게임도중 1등을 하고 진짜로 치킨을 먹을 수 있으면 좋겠다' 라는 생각과 '정말 힘들게 1등하고 사진 한 장남기는 것'이 아쉬워 시작하였습니다.</del></p>
         <br><br>
@@ -89,18 +91,26 @@
         <br>
         <h2>이번주 당첨자 (배그ID)</h2>
         <br>
-        <% @random.each do |a|%>
-            <h4><%= a.boardUserBGID %></h4> <br> 
-        <% end %>
+        당첨자1 : ?<br>
+        당점자2 : ?<br>
+        당첨자3 : ?<br>
+        <br><br><br>
+        <%# @random.each do |a|%>
+            <!--<h4><%#= a.boardUserBGID %></h4> <br> -->
+        <%# end %>
     </div>
 </section>
 
-<section id="move_button">
-
-    <div class="container">
-        
+<footer>
+    <div class="container" style="text-align: right">
+        <br><br>
+        <div class="about">
+            <span style="color: gray">문의 : rlfgus777@naver.com</span> &nbsp;&nbsp;&nbsp;&nbsp;<a href="/terms" style="color: #222">이용약관</a> | <a href="/terms" style="color: #222">개인정보취급방침</a>  
+        </div>
+        <br>
+        <p>Copyright &copy; 2017 bgchicken.com</p>
     </div>
-</section>
+</footer>
 
 <script>
     
